--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.2",
-    "node": "^20.2.0",
+    "node": "^18.15.0",
     "scripts": "^0.1.0"
   },
-  "engines": { "node" : "20.2.0" },
-  "scripts": {"start": "node app.js"},
+  "engines": {
+    "node": "18.15.0"
+  },
+  "scripts": {
+    "start": "node app.js"
+  },
   "author": "",
   "license": "ISC"
 }
