--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,8 @@
     "routes": [
         {
           "src": "/(.*)",
-          "dest": "app.js"
+          "dest": "app.js",
+          "body": "10mb"
         }
     ]
   }
