한번에보내는크기20mb설정함

--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,7 @@
     "routes": [
         {
           "src": "/(.*)",
-          "dest": "app.js",
-          "body": "10mb"
+          "dest": "app.js"
         }
     ]
   }
